--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,38 +11,40 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
-    <TextView
-            android:text="CODE"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/lyt_edit_code"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/airport_code"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-    <EditText
-            android:id="@+id/edit_code"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:hint="ICAO Code"
-            app:layout_constraintLeft_toRightOf="@id/airport_code"
-            android:layout_marginStart="10dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="@={viewModel.mCode}"/>
-    <Button
-            android:id="@+id/btn_get_metar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="GET METAR"
-            app:layout_constraintStart_toEndOf="@+id/edit_code"
-            app:layout_constraintTop_toTopOf="parent"
-            android:onClick="@{()-> viewModel.onSendClicked()}"/>
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:text="CODE"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/airport_code"/>
+            <EditText
+                android:id="@+id/edit_code"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:hint="ICAO Code"
+                android:layout_marginStart="10dp"
+                android:text="@={viewModel.mCode}"/>
+            <Button
+                android:id="@+id/btn_get_metar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="GET METAR"
+                android:onClick="@{()-> viewModel.onSendClicked()}"/>
+        </LinearLayout>
 
     <TextView
             android:id="@+id/txt_metar_data"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/edit_code"
+            app:layout_constraintTop_toBottomOf="@id/lyt_edit_code"
             android:layout_marginTop="20dp"
             android:text="@{viewModel.decodedData}"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
