--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
         <LinearLayout
             android:id="@+id/lyt_edit_code"
@@ -47,5 +47,16 @@
             app:layout_constraintTop_toBottomOf="@id/lyt_edit_code"
             android:layout_marginTop="20dp"
             android:text="@{viewModel.decodedData}"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="50dp"
+        android:text="Update Cache"
+        android:onClick="@{()-> viewModel.onUpdateCacheClicked()}"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
