--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -8,10 +8,10 @@
         android:id="@+id/txt_welcome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Welcome \nto\nMETAR Browser"
+        android:text="@string/txt_welcome_message"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="70dp"
-        android:textSize="50dp"
+        android:textSize="50sp"
         android:gravity="center_horizontal"
         android:textStyle="bold|italic"/>
 
@@ -19,7 +19,7 @@
         android:id="@+id/btn_search_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Search by ICAO Code"
+        android:text="@string/btn_label_search_code"
         android:textSize="25sp"
         app:layout_constraintTop_toBottomOf="@+id/txt_welcome"
         android:layout_marginTop="50dp"
@@ -31,7 +31,7 @@
         android:id="@+id/btn_search_german_station"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Search from German station list"
+        android:text="@string/btn_labelsearch_from_list"
         android:textSize="25sp"
         app:layout_constraintTop_toBottomOf="@+id/btn_search_code"
         android:layout_marginTop="50dp"
