--- a/app/src/main/res/layout/station_listview.xml
+++ b/app/src/main/res/layout/station_listview.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="List of available German ICAO Station Code"
+        android:text="@string/txt_available_list"
         android:textSize="25sp"
         android:textStyle="bold"
         android:layout_marginTop="30dp"
