--- a/app/src/main/res/layout/layout_metar_data_details.xml
+++ b/app/src/main/res/layout/layout_metar_data_details.xml
@@ -106,13 +106,14 @@
                             android:textSize="25sp"
                             android:textStyle="bold"
                             app:layout_constraintTop_toBottomOf="@+id/txt_icao_code"
-                            app:layout_constraintLeft_toLeftOf="parent"/>
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            android:layout_marginTop="10dp"/>
 
                         <TextView
                             android:id="@+id/txt_raw_data"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/content"
+                            android:text="@={viewModel.mRawData}"
                             android:textSize="20sp"
                             app:layout_constraintTop_toBottomOf="@+id/txt_label_raw_data"
                             app:layout_constraintLeft_toLeftOf="parent"/>
@@ -124,7 +125,8 @@
                             android:textSize="25sp"
                             android:textStyle="bold"
                             app:layout_constraintTop_toBottomOf="@+id/txt_raw_data"
-                            app:layout_constraintLeft_toLeftOf="parent"/>
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            android:layout_marginTop="10dp"/>
 
                         <TextView
                             android:id="@+id/txt_decoded_data"
