--- a/app/src/main/res/layout/station_list_item_card.xml
+++ b/app/src/main/res/layout/station_list_item_card.xml
@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
-    android:descendantFocusability="beforeDescendants"
     android:background="@drawable/card_background_selector">
+
+    <TextView
+        android:id="@+id/station_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:ellipsize="end"
+        android:textSize="25sp"
+        android:textStyle="italic"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/station_code"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:textSize="25sp"
-        android:gravity="center"/>
-</FrameLayout>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:textStyle="italic|bold" />
+</RelativeLayout>
