--- a/app/src/main/res/layout/layout_metar_data_details.xml
+++ b/app/src/main/res/layout/layout_metar_data_details.xml
@@ -127,7 +127,7 @@
                             android:id="@+id/txt_label_decoded_data"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Decoded Data"
+                            android:text="@string/label_decoded_data"
                             android:textSize="20sp"
                             android:textStyle="bold"
                             app:layout_constraintTop_toTopOf="parent"
@@ -160,7 +160,7 @@
                             android:id="@+id/txt_label_raw_data"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Decoded Data"
+                            android:text="@string/label_raw_data"
                             android:textSize="20sp"
                             android:textStyle="bold"
                             app:layout_constraintTop_toTopOf="parent"
