--- a/app/src/main/res/layout/activity_search_by_code.xml
+++ b/app/src/main/res/layout/activity_search_by_code.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:text="Metar Browser"
+                android:text="@string/label_metar_browser"
                 android:textColor="@android:color/white"
                 android:textSize="25sp"
                 android:textStyle="italic|bold" />
@@ -52,7 +52,7 @@
                 android:layout_weight="2.5"
                 android:layout_marginStart="10dp"
                 android:text="@={viewModel.mEditTextCodeEntry}"
-                android:hint="ICAO Station Code"
+                android:hint="@string/hint_icao_code"
                 android:maxLines="1"
                 android:scrollHorizontally="true"
                 android:ellipsize="end"
