--- a/app/src/main/res/layout/activity_search_from_list.xml
+++ b/app/src/main/res/layout/activity_search_from_list.xml
@@ -25,7 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:text="Metar Browser"
+                android:text="@string/label_metar_browser"
                 android:textColor="@android:color/white"
                 android:textSize="25sp"
                 android:textStyle="italic|bold" />
@@ -45,7 +45,7 @@
                 android:id="@+id/label_selection_station"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Select Station"
+                android:text="@string/label_select_station"
                 android:textSize="15sp"
                 android:textStyle="bold"/>
 
@@ -57,17 +57,6 @@
                 android:layout_alignParentBottom="true"/>
 
         </RelativeLayout>
-
-        <ProgressBar
-            android:id="@+id/progress_list_download"
-            style="?android:attr/progressBarStyleLarge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:visibility="gone"/>
 
         <RelativeLayout
             android:id="@+id/lyt_details_view"
@@ -92,6 +81,18 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+
+
+
+        <ProgressBar
+            android:id="@+id/progress_list_download"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
