--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -21,7 +21,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginBottom="30dp"
             android:gravity="center"
-            android:text="Metar Browser"
+            android:text="@string/label_metar_browser"
             android:textColor="@android:color/white"
             android:textSize="30sp"
             android:textStyle="italic|bold" />
@@ -49,7 +49,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:gravity="center"
-                android:text="Search ICAO by Code"
+                android:text="@string/btn_label_search_code"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
 
@@ -78,7 +78,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:gravity="center"
-                android:text="Search from Filtered List"
+                android:text="@string/btn_label_search_from_list"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
 
